image url change

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <main class="index-main">
         <div class="index-main__logo-imagebox">
-            <img class="index-main__logo-image" src="/Image/adobe_main.jpg">
+            <img class="index-main__logo-image" src="http://127.0.0.1:5500/image/adobe_main.jpg">
         </div>
         <form class="index-main__login-form">
             <button class="index-main__button google__button">
