--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <button class="index-main__button google__button">
                 <a href="home.html"></a>
                 <div class="index-main__button__column"> 
-                    <img class="index-main__button__image" src="Image/google_logo.png">
+                    <img class="index-main__button__image" src="http://127.0.0.1:5500/Image/google_logo.png">
                     <div class="index-main__button__text">Google</div>
                 </div>
             </button>
