home page header

--- a/home.html
+++ b/home.html
@@ -25,19 +25,17 @@
     <header class="home-header">
         <div class="home-header__story-circle">
             <span class="home-header__story-circle__img"><i class="fas fa-camera"></i></span>
-            <span class="home-header__story-circle__text">+ add</span>
+            <span class="home-header__story-circle__text">+add</span>
         </div>
         <div class="home-header__story-circle">
-            <span class="home-header__story-circle__img"><i class="fas fa-camera"></i></span>
+            <span class="home-header__story-circle__img story-circle__img__d-effect"><img class="story-circle__logo" src="image/D-effect_logo_color.png"></span>
             <span class="home-header__story-circle__text">DesignEffect</span>
         </div>
     </header>
         
     <main class="home-main">
         <div class="home-main__postbox">
-            <div class="home-main__postbox__img">
-                <img src="">
-            </div>
+            <img class="home-main__postbox__img" src="Image/poster.png">
             <div class="home-main__postbox__Exp">
                 <span class="home-main__postbox__title">XX Fashion Show</span>
                 <div>
