--- a/home.html
+++ b/home.html
@@ -7,7 +7,8 @@
     <title>Welcome to DesignEffect</title>
 </head>
 <body>
-    <div class="status-bar status-bar__home">
+    <div class="viewport viewport__home">
+        <div class="status-bar status-bar__home">
         <div class="status-bar__column">
             <span>No Service</span>
             <i class="fas fa-wifi"></i>
@@ -16,53 +17,90 @@
             <span>18:43</span>
         </div>
         <div class="status-bar__column">
-            <span>110%</span>
+            <span>1000%</span>
             <i class="fas fa-battery-full"></i>
             <i class="fas fa-bolt"></i>
         </div>
-    </div>
+        </div>
 
-    <header class="home-header">
+        <header class="home-header">
         <div class="home-header__story-circle">
             <span class="home-header__story-circle__img"><i class="fas fa-camera"></i></span>
             <span class="home-header__story-circle__text">+add</span>
         </div>
         <div class="home-header__story-circle">
             <span class="home-header__story-circle__img story-circle__img__d-effect"><img class="story-circle__logo" src="image/D-effect_logo_color.png"></span>
-            <span class="home-header__story-circle__text">DesignEffect</span>
+            <span class="home-header__story-circle__text">D-Effect</span>
         </div>
-    </header>
-        
-    <main class="home-main">
-        <div class="home-main__postbox">
-            <img class="home-main__postbox__img" src="Image/poster.png">
-            <div class="home-main__postbox__Exp">
-                <span class="home-main__postbox__title">XX Fashion Show</span>
-                <div>
-                    <img src="">
-                    <span class="home-main__postbox__name">Simone Scimmi</span>
+        <div class="home-header__story-circle">
+            <span class="home-header__story-circle__img story-circle__img__d-effect"><img class="story-circle__logo" src="Image/profile.png"></span>
+            <span class="home-header__story-circle__text">jihyeok um</span>
+        </div>
+        </header>
+
+        <main class="home-main">
+
+            <div class="home-main__postbox">
+                <img class="home-main__postbox__img" src="Image/poster4.jpg">
+                <div class="home-main__postbox__Exp">
+                    <span class="home-main__postbox__title">D-effect poster!!!!</span>
+                    <div class="home-main__postbox__profile">
+                        <div class="home-main__postbox__profile__img">
+                            <img class="home-main__postbox__profile__img" src="image/profile.png">
+                        </div>   
+                        <span class="home-main__postbox__name">jihyeok um</span>
+                    </div>
                 </div>
             </div>
-        </div>
-    </main>
 
-    <nav class="nav">
+            <div class="home-main__postbox">
+                <img class="home-main__postbox__img" src="Image/poster5.jpg">
+                <div class="home-main__postbox__Exp">
+                    <span class="home-main__postbox__title">Photoshop Poster :)</span>
+                    <div class="home-main__postbox__profile">
+                        <div class="home-main__postbox__profile__img">
+                            <img class="home-main__postbox__profile__img" src="image/profile-img.png">
+                        </div>   
+                        <span class="home-main__postbox__name">chaehee yun</span>
+                    </div>
+                </div>
+            </div>
+    
+            <div class="home-main__postbox">
+                <img class="home-main__postbox__img" src="Image/poster2.jpg">
+                <div class="home-main__postbox__Exp">
+                    <span class="home-main__postbox__title">Fallout Parasite! XD</span>
+                    <div class="home-main__postbox__profile">
+                        <div class="home-main__postbox__profile__img">
+                            <img class="home-main__postbox__profile__img" src="image/profile.png">
+                        </div>   
+                        <span class="home-main__postbox__name">jihyeok um</span>
+                    </div>
+                </div>
+            </div>
+
+        </main>
+
+        <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn">
-                <a class="nav_link" href="home.html"><i class="fas fa-user fa-2x"></i></a>
+                <a class="nav_link nav_link__blue" href="home.html"><i class="fas fa-home blue"></i></a>
             </li>
             <li class="nav__btn">
-                <a class="nav_link" href="chat.html"><i class="far fa-comment fa-2x"></i></a>
+                <a class="nav_link" href="find.html"><i class="fas fa-search fa"></i></a>
             </li>
             <li class="nav__btn">
-                <a class="nav_link" href="find.html"><i class="fas fa-search fa-2x"></i></a>
+                <a class="nav_link" href="plus.html"><i class="fas fa-plus-circle"></i></a>
             </li>
             <li class="nav__btn">
-                <span class="nav__redcircle nav__redcircle-position__absolute"></span>
-                <a class="nav_link" href="more.html"><i class="fas fa-ellipsis-h fa-2x"></i></a>
+                <a class="nav_link" href="notice.html"><i class="fas fa-bell"></i></a>
+            </li>
+            <li class="nav__btn">
+                <a class="nav_link" href="profile.html"><i class="fas fa-user"></i></a>
             </li>
         </ul>
-    </nav>
+        </nav>
+    </div>
     <script src="https://kit.fontawesome.com/e9d46ad7c4.js" crossorigin="anonymous">
     </script>
 </body>
