--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Welcome to DesignEffect</title>
 </head>
 <body class="body__index">
-    <div class="status-bar status-bar__index">
+    <div class="viewport">
+        <div class="status-bar status-bar__index">
         <div class="status-bar__column">
             <span>No Service</span>
             <i class="fas fa-wifi"></i>
@@ -16,15 +17,15 @@
             <span>18:43</span>
         </div>
         <div class="status-bar__column">
-            <span>110%</span>
+            <span>1000%</span>
             <i class="fas fa-battery-full"></i>
             <i class="fas fa-bolt"></i>
         </div>
-    </div>
+        </div>
 
-    <main class="index-main">
+        <main class="index-main">
         <div class="index-main__logo-imagebox">
-            <h1 class="index-main__logo-title">DesignEffect</h1>
+            <h1 class="index-main__logo-title">D-Effect</h1>
             <h2 class="index-main__logo-text">MYONGJI UNIV. design institute</h2>
             <img class="index-main__logo-image" src="http://127.0.0.1:5500/image/adobe_main.jpg">
         </div>
@@ -37,12 +38,14 @@
                 </div>
             </button>
             <button class="index-main__button email__button">
-                Continue by email</button>
+                <div class="index-main__button__text">Continue by email</div>
+            </button>
         </form>
-    </main>
+        </main>
         <div class="login__a">
             <a href="#">See other options</a>
         </div>
+    </div>    
         
     <script src="https://kit.fontawesome.com/e9d46ad7c4.js" crossorigin="anonymous">
     </script>
