find screen done

--- a/find__album-cover.html
+++ b/find__album-cover.html
@@ -30,27 +30,31 @@
         </header>
 
         <ul class="search__list">
-            <li class="search__btn search__btn-active"><a href="find.html">recommanded</a></li>
-            <li class="search__btn"><a href="find__album-cover.html">album cover</a></li>
+            <li class="search__btn"><a href="find.html">recommanded</a></li>
+            <li class="search__btn search__btn-active"><a href="find__album-cover.html">album cover</a></li>
             <li class="search__btn"><a href="find__poster.html">poster</a></li>
         </ul>
 
         <main class="home-main">
             <ul class="find__postbox">
-                <img class="find__post" src="Image/poster4.jpg">
-                <img class="find__post" src="Image/poster.png">    
+                <img class="find__post" src="Image/album1.jpg">
+                <img class="find__post" src="Image/album2.jpg">    
+            </ul>
+            <ul class="find__postbox">
+                <img class="find__post" src="Image/album10.jpg">
+                <img class="find__post" src="Image/album8.jpg">
             </ul>
             <ul class="find__postbox">
                 <img class="find__post" src="Image/album4.jpg">
                 <img class="find__post" src="Image/album5.jpg">    
             </ul>
             <ul class="find__postbox">
-                <img class="find__post" src="Image/album9.jpg">
-                <img class="find__post" src="Image/album10.jpg">    
+                <img class="find__post" src="Image/album6.jpg">
+                <img class="find__post" src="Image/album7.jpg">    
             </ul>
             <ul class="find__postbox">
-                <img class="find__post" src="Image/background1.png">
-                <img class="find__post" src="Image/background2.jpg">    
+                <img class="find__post" src="Image/album3.jpg">
+                <img class="find__post" src="Image/album9.jpg">    
             </ul>
             </main>
 
