--- a/find__poster.html
+++ b/find__poster.html
@@ -30,27 +30,27 @@
         </header>
 
         <ul class="search__list">
-            <li class="search__btn search__btn-active"><a href="find.html">recommanded</a></li>
+            <li class="search__btn"><a href="find.html">recommanded</a></li>
             <li class="search__btn"><a href="find__album-cover.html">album cover</a></li>
-            <li class="search__btn"><a href="find__poster.html">poster</a></li>
+            <li class="search__btn search__btn-active"><a href="find__poster.html">poster</a></li>
         </ul>
-
+        
         <main class="home-main">
             <ul class="find__postbox">
                 <img class="find__post" src="Image/poster4.jpg">
                 <img class="find__post" src="Image/poster.png">    
             </ul>
             <ul class="find__postbox">
-                <img class="find__post" src="Image/album4.jpg">
-                <img class="find__post" src="Image/album5.jpg">    
+                <img class="find__post" src="Image/poster9.jpg">
+                <img class="find__post" src="Image/poster3.jpg">    
             </ul>
             <ul class="find__postbox">
-                <img class="find__post" src="Image/album9.jpg">
-                <img class="find__post" src="Image/album10.jpg">    
+                <img class="find__post" src="Image/poster5.jpg">
+                <img class="find__post" src="Image/poster6.jpg">    
             </ul>
             <ul class="find__postbox">
-                <img class="find__post" src="Image/background1.png">
-                <img class="find__post" src="Image/background2.jpg">    
+                <img class="find__post" src="Image/poster7.jpg">
+                <img class="find__post" src="Image/poster8.jpg">    
             </ul>
             </main>
 
