--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
         </div>
         </div>
 
-        <header class="home-header">
+        <header class="header home-header">
         <div class="home-header__story-circle">
             <span class="home-header__story-circle__img"><i class="fas fa-camera"></i></span>
             <span class="home-header__story-circle__text">+add</span>
