notice screen done

--- a/notice.html
+++ b/notice.html
@@ -23,10 +23,42 @@
         </div>
         </div>
 
-        <header class="home-header">
+        <header class="home-header notice-header">
+            <div class="home-main__postbox">
+                <div class="home-main__postbox__Exp notice-bar">
+                    <div class="notice__up-bar">
+                        <span class="home-main__postbox__title">Notice</span>
+                        <span>View all</span>
+                    </div>
+                    <div class="home-main__postbox__profile notice__column">
+                        <div class="home-main__postbox__profile__img">
+                            <img class="home-main__postbox__profile__img notice__profile" src="image/profile.png">
+                        </div>   
+                        <span class="home-main__postbox__name notice__text">
+                            <span class="notice__name">jihyeok um</span> 
+                            followed your work!
+                        </span>
+                    </div>
+                </div>
+            </div>
         </header>
 
         <main class="home-main">
+            <div class="home-main__postbox">
+                <div class="home-main__postbox__Exp mail-bar">
+                    <div class="notice__up-bar">
+                        <span class="home-main__postbox__title">
+                            Received Mailbox</span>
+                        <span>View all</span>
+                    </div>
+                    <div class="home-main__postbox__profile mail__column">
+                        <span class="home-main__postbox__name mail__text">
+                            No message
+                        </span>
+                        <button class="mail__btn">Write a mail</button>
+                    </div>
+                </div>
+            </div>
         </main>
 
         <nav class="nav">
