--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
         <div class="login__a">
             <a href="#">See other options</a>
         </div>
-    </div>    
+
+        <div class="loading-animation">
+            <img class="loading__img" src="Image/D-effect_logo.png">
+        </div>
+    </div>  
         
     <script src="https://kit.fontawesome.com/e9d46ad7c4.js" crossorigin="anonymous">
     </script>
