--- a/profile__moodboard.html
+++ b/profile__moodboard.html
@@ -44,25 +44,25 @@
         </div>
 
         <ul class="search__list">
-            <li class="search__btn search__btn-active"><a href="profile.html">Work</a></li>
+            <li class="search__btn"><a href="profile.html">Work</a></li>
             <li class="search__btn"><a href="profile__info.html">Infomation</a></li>
-            <li class="search__btn"><a href="profile__moodboard.html">Moodboard</a></li>
+            <li class="search__btn search__btn-active"><a href="profile__moodboard.html">Moodboard</a></li>
             <li class="search__btn"><a href="profile__rating.html">rating</a></li>
         </ul>
 
         <main class="home-main">
-            <div class="home-main__postbox">
-                <img class="home-main__postbox__img" src="Image/album6.jpg">
-                <div class="home-main__postbox__Exp">
-                    <span class="home-main__postbox__title">Album cover!</span>
-                    <div class="home-main__postbox__profile">
-                        <div class="home-main__postbox__profile__img">
-                            <img class="home-main__postbox__profile__img" src="image/profile.png">
-                        </div>   
-                        <span class="home-main__postbox__name">jihyeok um</span>
-                    </div>
-                </div>
-            </div>
+            <ul class="find__postbox">
+                <img class="find__post" src="Image/album10.jpg">
+                <img class="find__post" src="Image/album8.jpg">
+            </ul>
+            <ul class="find__postbox">
+                <img class="find__post" src="Image/album4.jpg">
+                <img class="find__post" src="Image/album5.jpg">    
+            </ul>
+            <ul class="find__postbox">
+                <img class="find__post" src="Image/album6.jpg">
+                <img class="find__post" src="Image/album7.jpg">    
+            </ul>
         </main>
 
         <nav class="nav">
