--- a/home.html
+++ b/home.html
@@ -29,11 +29,11 @@
             <span class="home-header__story-circle__text">+add</span>
         </div>
         <div class="home-header__story-circle">
-            <span class="home-header__story-circle__img story-circle__img__d-effect"><img class="story-circle__logo" src="image/D-effect_logo_color.png"></span>
+            <span class="home-header__story-circle__img story-circle__img__d-effect"><img class="story-circle__logo" src="http://designeffect.dothome.co.kr/image/D-effect_logo_color.png"></span>
             <span class="home-header__story-circle__text">D-Effect</span>
         </div>
         <div class="home-header__story-circle">
-            <span class="home-header__story-circle__img story-circle__img__d-effect"><img class="story-circle__logo" src="Image/profile.png"></span>
+            <span class="home-header__story-circle__img story-circle__img__d-effect"><img class="story-circle__logo" src="Image/github_profile.png"></span>
             <span class="home-header__story-circle__text">jihyeok um</span>
         </div>
         </header>
@@ -46,7 +46,7 @@
                     <span class="home-main__postbox__title">D-effect poster!!!!</span>
                     <div class="home-main__postbox__profile">
                         <div class="home-main__postbox__profile__img">
-                            <img class="home-main__postbox__profile__img" src="image/profile.png">
+                            <img class="home-main__postbox__profile__img" src="Image/github_profile.png">
                         </div>   
                         <span class="home-main__postbox__name">jihyeok um</span>
                     </div>
@@ -59,7 +59,7 @@
                     <span class="home-main__postbox__title">Photoshop Poster :)</span>
                     <div class="home-main__postbox__profile">
                         <div class="home-main__postbox__profile__img">
-                            <img class="home-main__postbox__profile__img" src="image/profile-img.png">
+                            <img class="home-main__postbox__profile__img" src="http://designeffect.dothome.co.kr/image/profile-img.png">
                         </div>   
                         <span class="home-main__postbox__name">chaehee yun</span>
                     </div>
@@ -72,7 +72,7 @@
                     <span class="home-main__postbox__title">Fallout Parasite! XD</span>
                     <div class="home-main__postbox__profile">
                         <div class="home-main__postbox__profile__img">
-                            <img class="home-main__postbox__profile__img" src="image/profile.png">
+                            <img class="home-main__postbox__profile__img" src="Image/github_profile.png">
                         </div>   
                         <span class="home-main__postbox__name">jihyeok um</span>
                     </div>
