--- a/notice.html
+++ b/notice.html
@@ -32,7 +32,7 @@
                     </div>
                     <div class="home-main__postbox__profile notice__column">
                         <div class="home-main__postbox__profile__img">
-                            <img class="home-main__postbox__profile__img notice__profile" src="image/profile.png">
+                            <img class="home-main__postbox__profile__img notice__profile" src="Image/github_profile.png">
                         </div>   
                         <span class="home-main__postbox__name notice__text">
                             <span class="notice__name">jihyeok um</span> 
