--- a/profile__info.html
+++ b/profile__info.html
@@ -35,7 +35,7 @@
         </div>
 
         <div class="profile__text-box">
-            <span class="profile__name">Jiwoo Choi</span>
+            <span class="profile__name">Jihyeok Um</span>
             <div class="profile__text">
                 <span class="profile__friend-bar"><i class="fas fa-thumbs-up"></i> 1124</span>
                 <span class="profile__friend-bar"><i class="fas fa-user-tag"></i> 33</span>
