--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
                     <span class="home-main__postbox__title">Photoshop Poster :)</span>
                     <div class="home-main__postbox__profile">
                         <div class="home-main__postbox__profile__img">
-                            <img class="home-main__postbox__profile__img" src="image/profile-img.png">
+                            <img class="home-main__postbox__profile__img" src="image/icon_stud.png">
                         </div>   
                         <span class="home-main__postbox__name">chaehee yun</span>
                     </div>
