--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         <div class="index-main__logo-imagebox">
             <h1 class="index-main__logo-title">D-Effect</h1>
             <h2 class="index-main__logo-text">MYONGJI UNIV. design institute</h2>
-            <img class="index-main__logo-image" src="http://127.0.0.1:5500/image/adobe_main.jpg">
+            <img class="index-main__logo-image" src="Image/adobe_main.jpg">
         </div>
         <form action="home.html" method="get" class="index-main__login-form">
             <button class="index-main__button google__button">
                 <a href="home.html"></a>
                 <div class="index-main__button__column"> 
-                    <img class="index-main__button__image" src="http://127.0.0.1:5500/Image/google_logo.png">
+                    <img class="index-main__button__image" src="Image/google_logo.png">
                     <div class="index-main__button__text">Google</div>
                 </div>
             </button>
