--- a/find__album-cover.html
+++ b/find__album-cover.html
@@ -50,7 +50,7 @@
             </ul>
             <ul class="find__postbox">
                 <img class="find__post" src="Image/album6.jpg">
-                <img class="find__post" src="Image/album7.jpg">    
+                <img class="find__post" src="https://upload.wikimedia.org/wikipedia/en/thumb/1/15/The_Elder_Scrolls_V_Skyrim_cover.png/220px-The_Elder_Scrolls_V_Skyrim_cover.png">    
             </ul>
             <ul class="find__postbox">
                 <img class="find__post" src="Image/album3.jpg">
