--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
         <main class="index-main">
         <div class="index-main__logo-imagebox">
-            <h1 class="index-main__logo-title">D-Effect</h1>
-            <h2 class="index-main__logo-text">MYONGJI UNIV. design institute</h2>
+            <h1 class="index-main__logo-title">BehanTalk</h1>
+            <h2 class="index-main__logo-text">Kokoa Challenge Graduated Project</h2>
             <img class="index-main__logo-image" src="Image/adobe_main.jpg">
         </div>
         <form action="home.html" method="get" class="index-main__login-form">
